@@ -26,8 +26,7 @@ sourceCompatibility = 11
 targetCompatibility = 11
 
 ext {
-    ignVer = '2.8.0-SNAPSHOT'
-    // ignVer = '2.7.0'
+    ignVer = '2.12.0-SNAPSHOT'
     moduleName = 'ignite_modules_test'
 }
 
@@ -129,8 +128,8 @@ test {
         "--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
         "--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
         "--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED",
-        "--illegal-access=permit",
-        "-Djdk.tls.client.protocols=TLSv1.2");
+        "--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED",
+        "--illegal-access=permit");
 }
 
 tasks.withType(Test) {
